<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:cnb_backgroundColor="@color/red"
        app:cnb_iconColor="@color/white" />


    <item
        android:id="@+id/fav"
        android:icon="@drawable/ic_fav"
        android:title="@string/favourites"
        app:cnb_backgroundColor="@color/red"
        app:cnb_iconColor="@color/white" />


    <item
        android:id="@+id/create"
        android:icon="@drawable/ic_create"
        android:title="@string/create"
        app:cnb_backgroundColor="@color/red"
        app:cnb_iconColor="@color/white" />
    <item
        android:id="@+id/reel"
        android:icon="@drawable/ic_reel"
        android:title="@string/reels"
        app:cnb_backgroundColor="@color/red"
        app:cnb_iconColor="@color/white" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/person"
        android:title="@string/profile"
        app:cnb_backgroundColor="@color/red"
        app:cnb_iconColor="@color/white" />

</menu>