<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".Activities.LoginActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_background" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="32dp"
        android:text="@string/hi_nplease_login"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:drawableStart="@drawable/person"
            android:drawablePadding="8dp"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColor="#707070" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextPwd"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="8dp"
                android:padding="8dp"
                android:textColor="#707070" />

            <ImageView
                android:id="@+id/eyeIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="7dp"
                android:padding="8dp"
                android:src="@drawable/baseline_visibility_off_24" />
        </RelativeLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_remember_password"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/forgotPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/forgot_password"
                android:textColor="@color/red"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <View
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="#707070" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/or_login_with" />

            <View
                android:id="@+id/view3"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="#707070" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:focusable="true"
                android:id="@+id/facebookLgn"
                android:orientation="horizontal"
                android:layout_weight="0.5"
                android:clickable="true"
                android:background="@drawable/social_btn_background"
                >

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:srcCompat="@drawable/facebook"
                    />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/facebook"
                    android:textColor="@color/green"
                    android:textStyle="bold"
                    android:textSize="24sp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/googleLgn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:focusable="true"
                android:orientation="horizontal"
                android:layout_weight="0.5"
                android:layout_marginStart="16dp"
                android:clickable="true"
                android:background="@drawable/social_btn_background"
                >

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:srcCompat="@drawable/google"
                    />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/google"
                    android:textColor="@color/green"
                    android:textStyle="bold"
                    android:textSize="24sp"/>
            </LinearLayout>

        </LinearLayout>

        <com.app.folionet.Activities.DiagonalButton
            android:id="@+id/lgnBtn"
            app:backgroundTint="@null"
            android:background="@drawable/button_glow2"
            android:layout_marginTop="14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textStyle="bold"
            android:textSize="32sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"/>
        <Button
            android:id="@+id/registrationBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_glow1"
            android:focusable="true"
            app:backgroundTint="@null"
            android:text="@string/registration"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:clickable="true"
            android:textStyle="bold"/>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="150dp"
            android:layout_marginVertical="170dp"
            android:elevation="10dp"
            android:visibility="gone"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>